# docs/swagger.yaml
@@ -29,6 +29,19 @@ definitions:
     - name
     - path
     type: object
+  dto.CreateListOpCode:
+    properties:
+      modelMesin:
+        type: string
+      opCode:
+        type: string
+      tipeTransaksi:
+        type: string
+    required:
+    - modelMesin
+    - opCode
+    - tipeTransaksi
+    type: object
   dto.CreateMappingkeywordlist:
     properties:
       MappingKeywordList:
@@ -99,42 +112,14 @@ definitions:
     type: object
   dto.CreateRole:
     properties:
-      actions:
-        items:
-          $ref: '#/definitions/dto.MenusAction'
-        type: array
       description:
         description: Main field
         type: string
       name:
         type: string
-      object_actions:
-        items:
-          properties:
-            id:
-              type: integer
-            name:
-              type: string
-            parentId:
-              type: integer
-            path:
-              type: string
-            state:
-              type: integer
-            type:
-              type: string
-          required:
-          - id
-          - name
-          - path
-          - type
-          type: object
-        type: array
     required:
-    - actions
     - description
     - name
-    - object_actions
     type: object
   dto.DeleteActionBulk:
     properties:
@@ -1094,6 +1079,165 @@ paths:
       summary: API untuk Membuat Jenis Transaksi Baru
       tags:
       - Jenis Transaksi
+  /listOpCode:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Halaman
+        in: query
+        name: page
+        required: true
+        type: string
+      - description: Jumlah Data Per halaman
+        in: query
+        name: page_size
+        required: true
+        type: string
+      - description: Mencari Data
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.ResponsePaginate'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+      summary: API untuk Ambil semua daftar list op code
+      tags:
+      - List Op code
+  /listOpCode/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: List Op ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+      summary: API untuk Delete List Op Code
+      tags:
+      - List Op Code
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update List Op Code Baru
+        in: body
+        name: listopcode
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateListOpCode'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+      summary: API untuk Update Data List OpCode
+      tags:
+      - List Op Code
+  /listOpCode/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Daftar List Op Code Baru
+        in: body
+        name: listopcode
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateListOpCode'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/middlewares.ResponseError'
+      summary: API untuk Membuat List Op Code Baru
+      tags:
+      - List Op Code
   /mappingCodes:
     delete:
       consumes:
